Final version of HCAR entry.

--- a/doc/HCAR/November-2009.tex
+++ b/doc/HCAR/November-2009.tex
@@ -12,11 +12,11 @@
 \makeheader
 
 Agda is a dependently typed functional programming language (developed
-using Haskell). The language has inductive families, i.e.\ GADTs which
-can be indexed by \emph{values} and not just types. Agda also supports
-coinductive types, parameterized modules, and mixfix operators, and
-comes with an \emph{interactive} Emacs interface (the type checker can
-assist you in the development of your code).
+using Haskell). A central feature of Agda is inductive families, i.e.\
+GADTs which can be indexed by \emph{values} and not just types. The
+language also supports coinductive types, parameterized modules, and
+mixfix operators, and comes with an \emph{interactive} interface---the
+type checker can assist you in the development of your code.
 
 A lot of work remains in order for Agda to become a full-fledged
 programming language (good libraries, mature compilers, documentation,
