Removed the Agda-executable package. + Will roll back this patch, because unfortunately it neither works   with GHC 6.12.1 nor the current development version of   cabal-install. Allegedly it works with GHC 6.10 if Cabal is invoked   manually (via Setup.hs) rather than using cabal-install.

--- a/README
+++ b/README
@@ -27,7 +27,7 @@ Wiki for information about the library.)
   Install the prerequisites mentioned below, then run the following
   commands:
 
-    cabal install Agda-executable
+    cabal install Agda
     agda-mode setup
 
   The second command tries to set up Emacs for use with Agda. As an
@@ -55,9 +55,6 @@ Wiki for information about the library.)
 
         cabal install
         agda-mode setup
-        cd src/main
-        cabal clean       # To ensure recompilation when upgrading.
-        cabal install
 
       The second command tries to set up Emacs for use with Agda. As
       an alternative you can copy the following text to your .emacs
