Submitted version of HCAR report.

--- a/doc/HCAR/May-2010.tex
+++ b/doc/HCAR/May-2010.tex
@@ -27,7 +27,7 @@ New since last time:
 \begin{itemize}
 \item Version 2.2.6 has been released, with experimental support for
   universe polymorphism.
-\item FreeBSD users can install Agda using FreshPorts.
+\item FreeBSD users can now install Agda using FreshPorts.
 \end{itemize}
 
 \FurtherReading
