--- a/test/interaction/README
+++ b/test/interaction/README
@@ -6,17 +6,16 @@ Test framework for interactions
   script SomeTest.in. The interaction script contains interactions (as
   commands to ghci) that should be performed on the Agda file.
 - A simple example:
-    top_command    (cmd_goals currentFile)
+    top_command currentFile (cmd_load_silently currentFile)
     goal_command 0 (cmd_goal_type_context Normalised) ""
     goal_command 0 cmd_give "s z"
     goal_command 0 cmd_give "Nothing"
-  The Agda file is loaded automatically before running the test script
-  and the variable currentFile is bound to the current file name (needed
-  by cmd_goals, for instance).
-- Two new functions have been added to Agda.Interaction.GhciTop for
+  The variable currentFile is bound to the current file name.
+- Some new functions have been added to Agda.Interaction.GhciTop for
   convenience:
-    top_command  :: Interaction -> IO ()
-    goal_command :: InteractionId -> GoalCommand -> String -> IO ()
+    load_silently :: FilePath -> [FilePath] -> IO ()
+    top_command   :: FilePath -> Interaction -> IO ()
+    goal_command  :: InteractionId -> GoalCommand -> String -> IO ()
 - The default scope for the script is
   Agda.Interaction.GhciTop and Agda.Interaction.BasicOps, but more modules
   can be added with ':mod +Agda.Some.Other.Module'.
