Removed recursive reference.

--- a/README
+++ b/README
@@ -65,14 +65,11 @@ There are several ways to install Agda:
       then you can give various flags to cabal install, see
       cabal install --help.
 
-  2b) If your system is Unix-like you can now hopefully install the
-      Agda 2 library, batch-mode tool and Emacs mode by running the
-      following command:
+  2b) Instead of following 2a you can try to install Agda (including
+      batch-mode tool and Emacs mode) by running the following
+      command:
 
         make install
-
-      If this does not work on your system, or you want to have more
-      control, you can follow 2b instead.
 
 ------------------------------------------------------------------------
 Configuring the Emacs mode
