--- a/HACKING
+++ b/HACKING
@@ -1,6 +1,4 @@
-
-Some Agda Hacking Lore. 
-
+Some Agda Hacking Lore
 
 * Whenever you change the interface file format you should update
   Agda.TypeChecking.Serialise.currentInterfaceVersion.
@@ -10,6 +8,9 @@ Some Agda Hacking Lore.
   test cases under test/succeed and test/fail, and maybe also
   test/interaction.
 
+* To run the test-suite, use make test (which does not work properly
+  unless you run autoreconf and ./configure first).
+
 * Please use __IMPOSSIBLE__ instead of calls to error. __IMPOSSIBLE__
   generates errors of the following form:
 
@@ -18,6 +19,3 @@ Some Agda Hacking Lore.
 
   Calls to error can make Agda fail with an error message in the *ghci*
   buffer.
-
-
-
