--- a/doc/HCAR/November-2010.tex
+++ b/doc/HCAR/November-2010.tex
@@ -24,8 +24,7 @@ programming language (good libraries, mature compilers, documentation,
 etc.), but already in its current state it can provide lots of fun as
 a platform for experiments in dependently typed programming.
 
-Since last time version 2.2.8 has been released, with these new
-features:
+In September version 2.2.8 was released, with these new features:
 \begin{itemize}
 \item Pattern matching for records.
 \item Proof-irrelevant function types.
