Incorporated Janis Voigtländers' edits.

--- a/doc/HCAR/November-2010.tex
+++ b/doc/HCAR/November-2010.tex
@@ -4,12 +4,11 @@
 
 \begin{document}
 
-\begin{hcarentry}[updated]{Agda}
+\begin{hcarentry}[section,updated]{Agda}
 \label{agda}
-\report{Nils Anders Danielsson}%05/10
+\report{Nils Anders Danielsson}%11/10
 \status{actively developed}
-\participants{Ulf Norell, Nils Anders Danielsson, Andreas Abel and
-  many others}
+\participants{Ulf Norell, Andreas Abel, and many others}
 \makeheader
 
 Agda is a dependently typed functional programming language (developed
