Submitted version of HCAR entry.

--- a/doc/HCAR/November-2011.tex
+++ b/doc/HCAR/November-2011.tex
@@ -28,8 +28,8 @@ following new features (among others):
 \begin{itemize}
 \item Instance arguments (Dominique Devriese).
 \item A JavaScript backend (Alan Jeffrey).
-\item More optimisations have been included in the Epic backend (Olle
-  Fredriksson and Daniel Gustafsson).
+\item More optimizations in the Epic backend (Olle Fredriksson and
+  Daniel Gustafsson).
 \item Pattern matching, multi-clause lambdas (Fredrik Nordvall
   Forsberg, Karim Kanso and Noam Zeilberger).
 \end{itemize}
