Updated HCAR entry draft.

--- a/doc/HCAR/May-2012.tex
+++ b/doc/HCAR/May-2012.tex
@@ -23,7 +23,14 @@ programming language (good libraries, mature compilers, documentation,
 etc.), but already in its current state it can provide lots of fun as
 a platform for experiments in dependently typed programming.
 
-% TODO: Write something about what we're up to at the moment.
+The next version of Agda is under development. The most interesting
+change to the language may be the addition of pattern synonyms,
+contributed by Stevan Andjelkovic and Adam Gundry. Other work has
+targeted the Emacs mode. Peter Divianszky has removed the prior
+dependency on GHCi and haskell-mode, and Guilhem Moulin and myself
+have made the Emacs mode more interactive: type-checking no longer
+blocks Emacs, and the expression that is currently being type-checked
+is highlighted.
 
 \FurtherReading
   The Agda Wiki: \url{http://wiki.portal.chalmers.se/agda/}
