Final version of HCAR entry.

--- a/doc/HCAR/May-2012.tex
+++ b/doc/HCAR/May-2012.tex
@@ -24,8 +24,9 @@ etc.), but already in its current state it can provide lots of fun as
 a platform for experiments in dependently typed programming.
 
 The next version of Agda is under development. The most interesting
-change to the language may be the addition of pattern synonyms,
-contributed by Stevan Andjelkovic and Adam Gundry. Other work has
+changes to the language may be the addition of pattern synonyms,
+contributed by Stevan Andjelkovic and Adam Gundry, and modifications
+of the constraint solver, implemented by Andreas Abel. Other work has
 targeted the Emacs mode. Peter Divianszky has removed the prior
 dependency on GHCi and haskell-mode, and Guilhem Moulin and myself
 have made the Emacs mode more interactive: type-checking no longer
